--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node src/index.ts",
     "build": "tsc",
-    "serve": "node dist/index.js"
+    "serve": "node dist/index.js",
+    "dev": "nodemon --watch src --exec ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -23,14 +24,17 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.13.14",
-    "dotenv": "^16.4.7",
     "eslint": "^9.23.0",
-    "express": "^5.1.0",
     "install": "^0.13.0",
     "nodemon": "^3.1.9",
     "npm": "^11.2.0",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
+  },
+  "dependencies": {
+    "mongodb": "^6.16.0",
+    "express": "^5.1.0",
+    "dotenv": "^16.4.7"
   }
 }
