--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   },
   "homepage": "https://github.com/denkxi/digital-dictionary-backend#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.14",
     "eslint": "^9.23.0",
     "install": "^0.13.0",
+    "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "npm": "^11.2.0",
     "prettier": "^3.5.3",
@@ -33,8 +36,11 @@
     "typescript": "^5.8.2"
   },
   "dependencies": {
-    "mongodb": "^6.16.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "dotenv": "^16.4.7"
+    "helmet": "^8.1.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.13.2"
   }
 }
