--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 PORT=3000
 MONGO_URI=mongodb://localhost:27017/mydb
 NODE_ENV=development
+JWT_SECRET=secret
+JWT_EXPIRES_IN=10m
+REFRESH_TOKEN_TTL=604800 # in seconds
