--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --runInBand",
     "start": "ts-node src/index.ts",
     "build": "tsc",
     "serve": "node dist/index.js",
@@ -26,15 +26,21 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.14",
+    "@types/supertest": "^6.0.3",
     "eslint": "^9.23.0",
     "install": "^0.13.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.1.9",
     "npm": "^11.2.0",
     "prettier": "^3.5.3",
+    "supertest": "^7.1.0",
+    "ts-jest": "^29.3.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.2"
   },
